# AlfaVoice

./: .clinerules  .gitignore  .kilocodemodes  AGENTS.md  OPTIMIZATIONS_README.md  README.md  WHISPER_SETUP.md  className_files.txt  index.md  memory-bank.md  setup_windows_sdk_env.ps1  setup_windows_sdk_env_fixed.ps1  temp_response.html
.devcontainer/: Dockerfile  devcontainer.json
.kilocode/memory-bank/: architecture.md  brief.md  context.md  index.md  product.md  tech.md
.kilocode/patterns/: code-standards.md  emergent-design.md  index.md  testing.md  triz-software.md
.kilocode/rules/: 1c-workflow.md  ai-execution-rules.md  git-workflow-rules.md  index.md  mcp-usage-guide.md  memory-bank-instructions.md  mode-delegation-example.md  orchestrator-guide.md  project-rules.md  roles.md  safety.md  security-rules.md  skills-index.md  testing-rules.md  tool-usage-guide.md  ui-ux-devops-roles.md
.kilocode/skills/: .gitkeep
.kilocode/workflows/: .gitkeep  QUICKREF.md  agent-orchestration.md  create-new-skill.md  deep-analysis.md  dependency-management.md  deployment-workflow.md  documentation-workflow.md  hotfix-emergency.md  index.md  migration-workflow.md  protocol-new.md  protocol-resume.md  protocol-review-merge.md  refactoring-workflow.md  submit-pr.md  update-indexes.md  vibe-coding.md
.protocols/: README.md  index.md
.protocols/2025-12-31-client-fixes/: brief.md  execution.md  plan.md
.protocols/TEMPLATE/: README.md  (+5 more)
client/: .env.example  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  styles.css  svelte.config.js  tailwind.config.js  types.ts  vite.config.js  vite.config.js.timestamp-1767219329978-e66ca4a97412b.mjs  vite.config.js.timestamp-1767356708011-f0f3bd482eb348.mjs  vitest.config.no-globals.ts  vitest.config.ts
client-svelte/: RXDB_IMPLEMENTATION.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  typesafe-i18n.config.ts  vite.config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: audio.rs  hotkey.rs  lib.rs  main.rs
reports/: migration-analysis-svelte.md
scripts/: download_models.ps1
server/: Cargo.toml  LIBTORCH_SETUP.md  README.md  SETUP_GUIDE.md  TESTING_REPORT.md  WHISPER_SETUP.md  download_libtorch.py  download_libtorch_cuda.ps1  setup_and_run.bat  setup_and_run_vcpkg.bat  setup_libtorch_python.ps1  test_websocket.ps1
server/src/: config.rs  llm.rs  main.rs  state.rs  whisper.rs  ws.rs
server/src/nlp/: bert.rs  mod.rs
server/tests/: integration_test.rs
(+327 files in other folders)
