[package]
name = "alfavoice-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
base64 = "0.22"
rayon = "1.10"
sysinfo = "0.30"
whisper-rs = { version = "0.12", default-features = false, features = [] }
thiserror = "1.0"
candle-core = { version = "0.6", optional = true }
candle-nn = { version = "0.6", optional = true }
candle-transformers = { version = "0.6", optional = true }
candle-flash-attn = { version = "0.6", optional = true }
tokenizers = { version = "0.20", optional = true }
hf-hub = { version = "0.3", optional = true }

# NLP dependencies
rust-bert = { version = "0.22", optional = true }

[features]
default = []
cuda = ["whisper-rs/cuda", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "candle-flash-attn"]
llm = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
nlp = ["rust-bert"]

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"

[profile.release]
# Link Time Optimization - enables cross-crate optimization
lto = "fat"
# Single codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Strip debug symbols for smaller binary size
strip = true
# Abort on panic for smaller binary (no unwinding code)
panic = "abort"
# Optimize for size (optional - uncomment if needed)
# opt-level = "z"
